<resources>
    <string name="app_name">Notes app</string>
    <string name="enter_pin">Enter PIN</string>
    <string name="settings_menu">Settings</string>
    <string name="note_s_title">Note\'s title</string>
    <string name="note_s_text">Note\'s text</string>
    <string name="has_deadline">Has deadline</string>
    <string name="deadline_day">Deadline day</string>
    <string name="save">Save</string>
    <string name="enter_new_pin">Enter new PIN</string>
    <string name="password">Password</string>
    <string name="save_pin">Save</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_0">0</string>
    <string name="txt_error_backspace">PIN is not entered</string>
    <string name="btn_tlb_back">Back</string>
    <string name="txt_toast_save_new_note">Note is saved</string>
    <string name="txt_toast_notsaved_new_note">Note was not saved</string>
    <string name="btn_open_notes">Open notes</string>
    <string name="toolbare_name_settings">Settings</string>
    <string name="toolbar_subtitle_notes">Notes</string>
    <string name="toolbar_subtitle_settings">Settings</string>
    <string name="toolbar_subtitle_newnote">New note</string>
    <string name="alert_dialog_title">Warning</string>
    <string name="alert_dialog_text">Do you want to delete this note?</string>
    <string name="toolbar_subtitle_editnote">Edit note</string>
</resources>