<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EFEFE9"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/enter_pin"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_circle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle" />

            <ImageView
                android:id="@+id/imageview_circle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle" />

            <ImageView
                android:id="@+id/imageview_circle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle" />

            <ImageView
                android:id="@+id/imageview_circle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:src="@drawable/circle" />
        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:columnCount="3"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_1"
            android:text="@string/btn_1" />

        <Button
            android:id="@+id/btn_2"
            android:text="@string/btn_2" />

        <Button
            android:id="@+id/btn_3"
            android:text="@string/btn_3" />

        <Button
            android:id="@+id/btn_4"
            android:text="@string/btn_4" />

        <Button
            android:id="@+id/btn_5"
            android:text="@string/btn_5" />

        <Button
            android:id="@+id/btn_6"
            android:text="@string/btn_6" />

        <Button
            android:id="@+id/btn_7"
            android:text="@string/btn_7" />

        <Button
            android:id="@+id/btn_8"
            android:text="@string/btn_8" />

        <Button
            android:id="@+id/btn_9"
            android:text="@string/btn_9" />

        <Button
            android:id="@+id/btn_backspace"
            android:drawableStart="@drawable/ic_backspace_foreground" />
        <Button
            android:id="@+id/btn_0"
            android:layout_gravity="fill"
            android:text="@string/btn_0" />
        <Button
        android:id="@+id/btn_checkPin"
        android:drawableStart="@drawable/ic_check_foreground" />

    </GridLayout>
</LinearLayout>
